# ed25519-dalek-timing

./: README.md
dudect/: Makefile  dudect_dalek_-O2
dudect/dut/dalek/: dut_dalek.c
ed25519_c_wrappers/: Cargo.toml
ed25519_c_wrappers/src/: lib.rs
