[package]
name = "ed25519_c_wrappers"
version = "0.1.0"
authors = ["mimoo <davidwong.crypto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { git = "https://github.com/calibra/ed25519-dalek.git", branch = "fiat2", features = ["std", "fiat_u64_backend"], default-features = false }
libc = "0.2.69"
rand= "0.7"

[lib]
crate-type = ["cdylib"]
